<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/backdrop"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@sample/backdrop" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/toolbar_layout"
                layout="@layout/toolbar_layout" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_poster"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@sample/poster"
                android:contentDescription="@string/poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_value"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="3"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_white_list"
            app:layout_constraintStart_toEndOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/image_backdrop" />

        <TextView
            android:id="@+id/tv_information"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/tv_title_value"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_value"
            tools:text="Year: 2020 | 4.8 " />

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_information"
            app:layout_constraintStart_toEndOf="@+id/tv_information"
            app:layout_constraintTop_toTopOf="@+id/tv_information"
            android:contentDescription="@string/star" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/card_poster" />

        <TextView
            android:id="@+id/tv_overview_value"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="7"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_value"
            app:layout_constraintStart_toStartOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genre_group"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_value"
            app:layout_constraintStart_toStartOf="@+id/card_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_value" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_white_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_heart_outlined"
            app:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/card_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_poster" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>