<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies"/>

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_heart_outlined"
        android:title="@string/favorites"/>

</menu>