...
            android:text="@string/app_name"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Theme.Outlined.IconOnly"
            android:id="@+id/btn_start"
            android:layout_width="@dimen/app_bar_menu_size"
            android:layout_height="@dimen/app_bar_menu_size"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            app:elevation="@dimen/app_bar_menu_elevation"
            app:strokeColor="@color/grey"
...
            app:iconTint="@color/dark_grey"
            app:iconSize="@dimen/app_bar_menu_icon_size"
            />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Theme.Outlined.IconOnly"
            android:id="@+id/btn_end"
            android:layout_width="@dimen/app_bar_menu_size"
            android:layout_height="@dimen/app_bar_menu_size"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:elevation="@dimen/app_bar_menu_elevation"
            app:strokeColor="@color/grey"
...
